outil/SystemParser.java
// Generated from C:/Users/User/Desktop/OpTaf/outil\System.g4 by ANTLR 4.5

  package outil;
  import bdd.*;
  import mso.*;
  import systeme.*;
  import java.util.ArrayList;
  import java.util.HashMap;
  import java.io.File;
    import java.io.PrintStream;
  

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SystemParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, NUM=48, ID=49, WS=50, COMMENT=51;
	public static final int
		RULE_commandes = 0, RULE_commande = 1, RULE_fichier = 2, RULE_systeme = 3, 
		RULE_propS = 4, RULE_etatS = 5, RULE_initS = 6, RULE_etatPropS = 7, RULE_transitionS = 8, 
		RULE_synchro = 9, RULE_vecteur = 10, RULE_mso = 11, RULE_msoSimple = 12, 
		RULE_automate = 13, RULE_etat = 14, RULE_acc = 15, RULE_init = 16, RULE_transition = 17, 
		RULE_formule = 18, RULE_multerm2 = 19, RULE_multerm1 = 20, RULE_multerm0 = 21, 
		RULE_subterm = 22, RULE_ctlformule = 23, RULE_ctlmulterm2 = 24, RULE_ctlmulterm1 = 25, 
		RULE_ctlmulterm0 = 26, RULE_ctlsubterm = 27;
	public static final String[] ruleNames = {
		"commandes", "commande", "fichier", "systeme", "propS", "etatS", "initS", 
		"etatPropS", "transitionS", "synchro", "vecteur", "mso", "msoSimple", 
		"automate", "etat", "acc", "init", "transition", "formule", "multerm2", 
		"multerm1", "multerm0", "subterm", "ctlformule", "ctlmulterm2", "ctlmulterm1", 
		"ctlmulterm0", "ctlsubterm"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';;'", "'+='", "'<-'", "'='", "'->'", "'|'", "'reduce'", "'automaton'", 
		"'quit'", "'todot'", "'load'", "'/'", "'./'", "'../'", "'.'", "'['", "']'", 
		"'{'", "'}'", "','", "'etat'", "';'", "'init'", "'<'", "'>'", "'&&'", 
		"'E.'", "'('", "')'", "'acc'", "'-'", "'||'", "'<->'", "'true'", "'false'", 
		"'ite'", "'!'", "'ite('", "'EX('", "'AX('", "'E('", "'U'", "'A('", "'EF('", 
		"'AF('", "'EG('", "'AG('"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NUM", "ID", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "System.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  Automaton res;
	  Systeme resS;
	  static HashMap<String,Automaton> table = new HashMap<String,Automaton>();
	  static HashMap<String,Systeme> tableS = new HashMap<String,Systeme>();
	  
	  
	  public static void parserString(String s) throws Exception {
	    CharStream input = new ANTLRInputStream(s);
	    parser(input);       
	  }

	  public static void parserFile(String s) throws Exception {
	    CharStream input = new ANTLRFileStream(s);
	    parser(input);       
	  }

	  public static void parser(CharStream input) throws Exception {
	    AutomateLexer lexer = new AutomateLexer(input);
	    CommonTokenStream tokens = new CommonTokenStream(lexer);
	    AutomateParser parser = new AutomateParser(tokens);
	    parser.commandes();
	  }
	  
	    public static void ecrire(String fichier, String texte) {
	    try {
	      PrintStream f = new PrintStream(new File(fichier));
	      f.print(texte);
	      f.close();
	    } catch (Exception e) {
	      System.err.println("Probleme d'ecriture !");
	    }
	  }

	public SystemParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CommandesContext extends ParserRuleContext {
		public List<CommandeContext> commande() {
			return getRuleContexts(CommandeContext.class);
		}
		public CommandeContext commande(int i) {
			return getRuleContext(CommandeContext.class,i);
		}
		public CommandesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemListener ) ((SystemListener)listener).enterCommandes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemListener ) ((SystemListener)listener).exitCommandes(this);
		}
	}

	public final CommandesContext commandes() throws RecognitionException {
		CommandesContext _localctx = new CommandesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_commandes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << ID))) != 0)) {
				{
				{
				setState(56); 
				commande();
				setState(57); 
				match(T__0);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandeContext extends ParserRuleContext {
		public Token i;
		public Token j;
		public CtlformuleContext ctlb;
		public FormuleContext b;
		public MsoContext m;
		public Token i1;
		public FichierContext f;
		public Token i2;
		public List<TerminalNode> ID() { return getTokens(SystemParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystemParser.ID, i);
		}
		public CtlformuleContext ctlformule() {
			return getRuleContext(CtlformuleContext.class,0);
		}
		public SystemeContext systeme() {
			return getRuleContext(SystemeContext.class,0);
		}
		public SynchroContext synchro() {
			return getRuleContext(SynchroContext.class,0);
		}
		public FormuleContext formule() {
			return getRuleContext(FormuleContext.class,0);
		}
		public AutomateContext automate() {
			return getRuleContext(AutomateContext.class,0);
		}
		public MsoContext mso() {
			return getRuleContext(MsoContext.class,0);
		}
		public FichierContext fichier() {
			return getRuleContext(FichierContext.class,0);
		}
		public CommandeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commande; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemListener ) ((SystemListener)listener).enterCommande(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemListener ) ((SystemListener)listener).exitCommande(this);
		}
	}

	public final CommandeContext commande() throws RecognitionException {
		CommandeContext _localctx = new CommandeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commande);
		int _la;
		try {
			setState(124);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(64); 
				((CommandeContext)_localctx).i = match(ID);
				setState(112);
				switch (_input.LA(1)) {
				case T__1:
					{
					setState(65); 
					match(T__1);

					            resS = tableS.get((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null));
					        
					setState(67); 
					((CommandeContext)_localctx).j = match(ID);
					setState(68); 
					match(T__2);
					setState(69); 
					((CommandeContext)_localctx).ctlb = ctlformule();

					            if (resS !=null) {
					                resS.addStateProperty(((CommandeContext)_localctx).ctlb.b,(((CommandeContext)_localctx).j!=null?((CommandeContext)_localctx).j.getText():null));
					            }
					            else {
					                System.err.println("La variable " + (((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null) + "n'existe pas.");
					            }
					        
					}
					break;
				case T__3:
					{
					setState(72); 
					match(T__3);
					setState(110);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						{
						setState(73); 
						((CommandeContext)_localctx).j = match(ID);
						setState(83);
						switch (_input.LA(1)) {
						case T__4:
							{
							setState(74); 
							match(T__4);

							                resS = tableS.get((((CommandeContext)_localctx).j!=null?((CommandeContext)_localctx).j.getText():null));
							                if (resS ==null) {
							                    System.err.println("La variable " + (((CommandeContext)_localctx).j!=null?((CommandeContext)_localctx).j.getText():null) + "n'existe pas.");
							                }
							            
							setState(76); 
							((CommandeContext)_localctx).ctlb = ctlformule();

							                if (resS !=null) {
							                    Systeme res = resS.path(((CommandeContext)_localctx).ctlb.b);
							                    tableS.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),res);
							                }
							            
							}
							break;
						case T__5:
							{
							setState(79); 
							match(T__5);
							setState(80); 
							((CommandeContext)_localctx).b = formule();

							                Systeme s = tableS.get((((CommandeContext)_localctx).j!=null?((CommandeContext)_localctx).j.getText():null));
							                if (s!=null) {
							                    Systeme res = s.restrict(((CommandeContext)_localctx).b.b);
							                    res.reduce();
							                    tableS.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),res);
							                }
							                else {
							                    System.err.println("La variable " + (((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null) + "n'existe pas.");
							                }
							            
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						}
						break;
					case 2:
						{
						setState(108);
						switch (_input.LA(1)) {
						case T__6:
						case T__7:
						case T__17:
						case T__26:
						case T__27:
						case ID:
							{
							{

							            boolean reduce = false;
							            
							setState(88);
							_la = _input.LA(1);
							if (_la==T__6) {
								{
								setState(86); 
								match(T__6);

								                    reduce = true;
								                
								}
							}

							setState(97);
							switch (_input.LA(1)) {
							case T__26:
							case T__27:
							case ID:
								{
								setState(90); 
								((CommandeContext)_localctx).m = mso();

								                    res = ((CommandeContext)_localctx).m.val;
								                
								}
								break;
							case T__17:
								{
								setState(93); 
								automate();
								}
								break;
							case T__7:
								{
								setState(94); 
								match(T__7);
								setState(95); 
								((CommandeContext)_localctx).i1 = match(ID);

								                    Systeme systeme = tableS.get((((CommandeContext)_localctx).i1!=null?((CommandeContext)_localctx).i1.getText():null));
								                    if (systeme == null)
								                        System.err.println((((CommandeContext)_localctx).i1!=null?((CommandeContext)_localctx).i1.getText():null) + " n'est pas défini comme un système");
								                    else
								                        res = systeme.toAutomaton();
								                
								}
								break;
							default:
								throw new NoViableAltException(this);
							}

							                if (reduce)
							                res.reduce();
							                table.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),res);
							            
							}
							}
							break;
						case T__15:
						case T__23:
							{
							setState(106);
							switch (_input.LA(1)) {
							case T__15:
								{
								setState(100); 
								systeme();

								            tableS.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),resS);
								        
								}
								break;
							case T__23:
								{
								setState(103); 
								synchro();

								            tableS.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),resS);
								        
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(114); 
				match(T__8);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(115); 
				match(T__9);
				setState(116); 
				((CommandeContext)_localctx).f = fichier();
				setState(117); 
				((CommandeContext)_localctx).i2 = match(ID);

				    Automaton a = table.get((((CommandeContext)_localctx).i2!=null?((CommandeContext)_localctx).i2.getText():null));
				    if (a!=null)
				      ecrire(((CommandeContext)_localctx).f.val,a.toDot());
				    else {
				      Systeme s = tableS.get((((CommandeContext)_localctx).i2!=null?((CommandeContext)_localctx).i2.getText():null));
				      if (s!=null)
				        ecrire(((CommandeContext)_localctx).f.val,s.toDot());
				      else {
				        System.err.println("La variable " + (((CommandeContext)_localctx).i2!=null?((CommandeContext)_localctx).i2.getText():null) + " n'existe pas.");
				      }
				    }
				  
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(120); 
				match(T__10);
				setState(121); 
				((CommandeContext)_localctx).f = fichier();

				  try {
				    parserFile(((CommandeContext)_localctx).f.val);
				  } catch (Exception e) {
				        System.err.println("problème de lecture du fichier " + (((CommandeContext)_localctx).f!=null?_input.getText(((CommandeContext)_localctx).f.start,((CommandeContext)_localctx).f.stop):null) + ".");  
				  };
				  
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FichierContext extends ParserRuleContext {
		public String val;
		public Token i;
		public Token i1;
		public List<TerminalNode> ID() { return getTokens(SystemParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystemParser.ID, i);
		}
		public FichierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fichier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemListener ) ((SystemListener)listener).enterFichier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemListener ) ((SystemListener)listener).exitFichier(this);
		}
	}

	public final FichierContext fichier() throws RecognitionException {
		FichierContext _localctx = new FichierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fichier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    StringBuffer s= new StringBuffer();
			  
			setState(140);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(127); 
				match(T__11);

				    s.append("/");
				  
				}
				break;
			case T__12:
				{
				setState(129); 
				match(T__12);

				    s.append("./");
				  
				}
				break;
			case T__13:
				{
				setState(131); 
				match(T__13);

				    s.append("../");
				  
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__13) {
					{
					{
					setState(133); 
					match(T__13);

					    s.append("../");
					  
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ID:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(142); 
			((FichierContext)_localctx).i = match(ID);

			    s.append((((FichierContext)_localctx).i!=null?((FichierContext)_localctx).i.getText():null));
			  
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11 || _la==T__14) {
				{
				{
				setState(148);
				switch (_input.LA(1)) {
				case T__14:
					{
					setState(144); 
					match(T__14);

					    s.append(".");
					  
					}
					break;
				case T__11:
					{
					setState(146); 
					match(T__11);

					    s.append("/");
					  
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(150); 
				((FichierContext)_localctx).i1 = match(ID);

				    s.append((((FichierContext)_localctx).i1!=null?((FichierContext)_localctx).i1.getText():null));
				  
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			    ((FichierContext)_localctx).val = s.toString();
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
